Swager Seed and API's
