# swagger/v1/swagger.yaml
@@ -28,10 +28,130 @@ paths:
           content: {}
   "/api/v1/enrollments":
     get:
-      summary: Student Enrollments
+      summary: All Enrollments
       tags:
       - Enrollments
       parameters:
+      - name: string
+        in: query
+        schema:
+          type: object
+          properties:
+            token:
+              type: string
+          required:
+          - token
+      responses:
+        '200':
+          description: Enrollment
+          content: {}
+        '422':
+          description: invalid request
+          content: {}
+    post:
+      summary: Create Enrollment
+      tags:
+      - Enrollments
+      parameters:
+      - name: string
+        in: query
+        schema:
+          type: object
+          properties:
+            token:
+              type: string
+          required:
+          - token
+      responses:
+        '200':
+          description: Create Enrollment
+          content: {}
+        '422':
+          description: invalid request
+          content: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                enrollment:
+                  type: object
+                  properties:
+                    course_number:
+                      type: string
+                    score:
+                      type: string
+                    credit:
+                      type: integer
+                    title:
+                      type: string
+                  required:
+                  - course_number
+                  - score
+                  - credit
+                  - title
+  "/api/v1/enrollments/{id}":
+    put:
+      summary: Update Enrollments
+      tags:
+      - Enrollments
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: Enrollement ID
+        schema:
+          type: integer
+      - name: string
+        in: query
+        schema:
+          type: object
+          properties:
+            token:
+              type: string
+          required:
+          - token
+      responses:
+        '200':
+          description: Enrollment
+          content: {}
+        '422':
+          description: invalid request
+          content: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                enrollment:
+                  type: object
+                  properties:
+                    course_number:
+                      type: string
+                    score:
+                      type: string
+                    credit:
+                      type: integer
+                    title:
+                      type: string
+                  required:
+                  - course_number
+                  - score
+                  - credit
+                  - title
+    get:
+      summary: Show Enrollement
+      tags:
+      - Enrollments
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: Enrollement ID
+        schema:
+          type: integer
       - name: string
         in: query
         schema:
